all.sh: Remove building a custom runtime using jlink